# AI-Workflow-Toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  make-release.sh  pyproject.toml  pytest.ini
.github/workflows/: compatibility.yml
aiwf_core/: __init__.py  aiwf_ui.py  cli.py  constants.py  install_claude.py  install_opencode.py  io.py  tui_actions.py  utils.py
aiwf_core/assets/: __init__.py  schema.py
aiwf_core/commands/: __init__.py  admission_commands.py  architecture_doc_commands.py  claims_commands.py  flow.py  foundation_commands.py  frontier_commands.py  goal_tree_commands.py  layout_commands.py  milestone_commands.py  mission_commands.py  ops_commands.py  parser.py  plan_commands.py  project_memory_commands.py  quality_commands.py  recipe_commands.py  research_commands.py  route_commands.py  state_commands.py  (+1 more)
docs/: AIWF-HUMAN-SURFACE.md  AIWF-PROMPT-CACHE-POLICY.md  AIWF-TECHNICAL-REPORT.md  AIWF-USAGE-TUTORIAL.md  AIWF-WORKFLOW-LEVELS.md  AIWF-WORKSPACE-DRIFT-POLICY.md  AIWF_DESIGN_AXIOMS.md  CHANGE_ADMISSION.md  DAY1_FOUNDATION_TREE.md  EXECUTION_FRONTIER.md  NODE_CONTRACT.md  README.md  TREE_FOUNDATION_MIGRATION.md  V1_DESIGN_CONTRACT.md  WORK_INTENT_DISCIPLINE.md
scripts/: aiwf_agent_gate.py  aiwf_agent_log.py  aiwf_auto_sync.py  aiwf_bash_guard.py  aiwf_capture_evidence.py  aiwf_export_report.py  aiwf_pre_snapshot.py  aiwf_rebase_state.py  aiwf_review_gate.py  aiwf_scope_check.py  aiwf_skill_log.py  aiwf_status.py
tests/: release-audit.sh  run-all-embedded-tests.sh  run-embedded-self-test.sh  run-real-tester-smoke.sh  run-self-test.sh
(+275 files in other folders)
