[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiwf"
version = "1.0"
description = "Embedded Claude Code and Reasonix workflow governance for long-horizon engineering work."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "ww-hh-ww" }]
keywords = ["claude-code", "reasonix", "workflow", "governance", "testing", "review"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/ww-hh-ww/AI-Workflow-Toolkit"
Repository = "https://github.com/ww-hh-ww/AI-Workflow-Toolkit"
Issues = "https://github.com/ww-hh-ww/AI-Workflow-Toolkit/issues"

[project.scripts]
aiwf = "aiwf_core.cli:main"

[tool.setuptools.packages.find]
include = ["aiwf_core*"]

[tool.setuptools.package-data]
aiwf_core = [
  "embedded_templates/CLAUDE.md",
  "embedded_templates/README.md",
  "embedded_templates/agents/*.md",
  "embedded_templates/scripts/*.py",
  "embedded_templates/shared/*.md",
  "embedded_templates/config/*.json",
  "embedded_templates/memory/*.md",
  "embedded_templates/skills/*/SKILL.md",
  "embedded_templates/skills/*/references/*.md",
]
